report: hyt + citations

--- a/report/bib.bib
+++ b/report/bib.bib
@@ -10,6 +10,27 @@
   year = {2008},
   type = {Technical datasheet}
 }
+@manual{hyt,
+  title = {HYGROCHIP
+DIGITAL HUMIDITY SENSOR
+HYT-271},
+  organization = {IST AG},
+  year = {2011},
+  type = {Technical datasheet}
+}
+@manual{hyt2,
+  title = {HYGROCHIP DIGITAL HUMIDITY SENSOR PROTOCOL DESCRIPTION I2C},
+  organization = {IST AG},
+  year = {2013},
+  type = {Technical datasheet}
+}
+@manual{hyt3,
+  title = {HYGROCHIP DIGITAL HUMIDITY SENSOR PROTOCOL DESCRIPTION I2C},
+  organization = {IST AG},
+  year = {2011},
+  type = {Technical datasheet}
+}
+
 @manual{zac,
   title = {Tsic Temperature Sensors IC Application Notes ZACwire TM Digital Output},
   organization = {Inovative Sensor Technology IST AG},
