more comments in code

--- a/report/main.tex
+++ b/report/main.tex
@@ -563,6 +563,7 @@ have a associated mutex, which has to be aquired before accessing the ressource.
 busy waiting when trying to aquire a mutex will immediately lead to a deadlock, due to the nature
 of the event loop approach.
 \subsubsection{TCP/IP Interface}
+% W5100 driver extension, to support clear receive buffer
 \subsubsection{I2C interface}
 \subsection{User interface}
 The ethernet board provides a terminal user interface over TCP/IP, which may be accessed via applications like telnet or netcat.
